# ansible-role-vscode

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  renovate.json  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ansible.yaml  auto-release.yaml  galaxy-publish.yaml  pr-validator.yaml  renovate.yaml
defaults/: main.yml
files/: vscode.repo
meta/: main.yml
molecule/default/: Dockerfile.j2  converge.yml  molecule.yml  playbook.yml
molecule/ubuntu/: Dockerfile.j2  molecule.yml  playbook.yml
tasks/: debian.yml  main.yml  redhat.yml  suse.yml
templates/: settings.json.j2  vscode.repo.j2
tests/: test.yml
vars/: main.yml
