[tool.poetry]
name = "ansible-role-vscode"
version = "0.1.0"
description = "Ansible role for installing Visual Studio Code with extensions and configuring it"
authors = ["Audun Nes <audun.nes@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
ansible = "^9.2.0"

[tool.poetry.group.dev.dependencies]
ansible-lint = { version = "^24.2.0", markers = "platform_system != 'Windows'" }
flake8 = "^7.0.0"
yamllint = "^1.35.0"
molecule-docker = "^2.1.0"
molecule = "^24.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
